syntax = "proto3";

package roomtype;

import "model.proto";

option go_package = "./pb";

service RoomTypeService {
    rpc GetRoomType(GetRoomTypeRequest) returns (GetRoomTypeResponse);
    // this method returns room types with quantity of each room typetaken into account
    rpc ListRoomTypesByTrip(ListRoomTypesByTripRequest) returns (stream ListRoomTypesByTripResponse);
    rpc ListRoomsOfReservation(ListRoomsOfReservationRequest) returns (stream ListRoomsOfReservationResponse);
}

// ListRoomTypesRequest
message ListRoomTypesByTripRequest {
    oneof id {
        uint64 hotel_id = 1;
        uint64 liveaboard_id = 10;
    }
    uint64 trip_id = 15;
    uint64 limit = 20;
    uint64 offset = 25;
}

// ListRoomTypesResponse
message ListRoomTypesByTripResponse {
    model.RoomType room_type = 1;
}

message ListRoomsOfReservationRequest {
    uint64 reservation_id = 1;
}

message ListRoomsOfReservationResponse {
    model.ReservationRoom room = 1;
}

message GetRoomTypeRequest {
    uint64 room_type_id = 1;
}

message GetRoomTypeResponse {
    model.RoomType room_type = 1;
}